--- a/style.css
+++ b/style.css
@@ -2,4 +2,74 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+
+header {
+  width: 100%;
+  text-align: center;
+}
+fig{
+  width: 100%;
+  text-align: center;
+  
+
+}
+
+nav {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+nav a {
+  padding: 10px 10px;
+  background-color: grey;
+  margin: 0 5px;
+  text-decoration: none;
+  color: white;
+  display: inline-block;
+}
+
+
+figure {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+figure img {
+  display: block;
+  margin: 0 auto;
+}
+
+
+figcaption {
+  font-size: 0.8em;
+  text-align: center;
+}
+
+
+#featured-property p {
+  width: 800px;
+  margin: 20px auto;
+  text-align: center;
+}
+
+
+#details {
+  width: 100%;
+}
+
+#details div {
+  float: left;
+  width: 25%;
+  background-color: red;
+  text-align: center;
+  padding: 10px;
+  box-sizing: border-box;
 }
